src/stylesheets/replace-followed-threads-link.scss
##{getGlobal("SITE.ID.header")} {
    // Prevent orange link from flashing briefly before being replaced:
    a[href="#{getGlobal("SITE.PATH.FOLLOWED")}"] {
        &.color-orange {
            $goodEnoughTemporaryColor: gray;

            span {
                color: $goodEnoughTemporaryColor !important; // to override SweClockers (and therefore also Soitora)
            }

            svg, path {
                fill: $goodEnoughTemporaryColor !important; // to override SweClockers (and therefore also Soitora)
            }
        }
    }

    a[href="#{getGlobal("SITE.PATH.MY_POSTS")}"] {
        margin-right: 16.5px !important; // ad-hoc solution to make it take up the same width as the followed threads link (!important necessary to override SweClockers)
    }
}

